// Copyright 2022 Strims contributors
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package strims.debug.v1;

option go_package = "github.com/MemeLabs/strims/pkg/apis/debug/v1;debug";
option java_package = "gg.strims.debug.v1";
option swift_prefix = "SDG";

message PProfRequest {
  string name = 1;
  bool debug = 2;
  bool gc = 3;
}
message PProfResponse {
  string name = 1;
  bytes data = 2;
}

message ReadMetricsRequest {
  MetricsFormat format = 1;
}

message ReadMetricsResponse {
  bytes data = 1;
}

message WatchMetricsRequest {
  MetricsFormat format = 1;
  int32 interval_ms = 2;
}

message WatchMetricsResponse {
  bytes data = 1;
}

enum MetricsFormat {
  METRICS_FORMAT_TEXT = 0;
  METRICS_FORMAT_PROTO_DELIM = 1;
  METRICS_FORMAT_PROTO_TEXT = 2;
  METRICS_FORMAT_PROTO_COMPACT = 3;
  METRICS_FORMAT_OPEN_METRICS = 4;
}

service Debug {
  rpc PProf(PProfRequest) returns (PProfResponse);
  rpc ReadMetrics(ReadMetricsRequest) returns (ReadMetricsResponse);
  rpc WatchMetrics(WatchMetricsRequest) returns (stream WatchMetricsResponse);
}
